fixed box alignment of columns commit

--- a/styles.css
+++ b/styles.css
@@ -90,11 +90,7 @@ article img {
 }
 
 section {
-  margin: 16px;
-}
-
-section {
-  margin: 16px;
+  margin-left: 16px;
 }
 
 section nav {
@@ -109,7 +105,7 @@ section li {
 #studios {
   padding: 16px;
   margin: 16px;
-  width: 40%;
+  width: 44%;
   /* height: 250px; */
   background-color: #C3D9F1;
   float: left;
@@ -122,7 +118,7 @@ section li {
 #projects {
   padding: 16px;
   margin: 16px;
-  width: 40%;
+  width: 44%;
   /* height: 250px; */
   background-color: #CFDCEC;
   float: left;
